@@ -516,6 +516,7 @@ Lenny Kneler
 Pat Knight
 Greg Kochanski
 Damon Kohler
+Jacek Konieczny
 Марк Коренберг
 Vlad Korolev
 Joseph Koshy
